# yax

./: .gitignore  AGENTS.md  catalog.md  ideas.md  pyproject.toml  yax.yml
.github/workflows/: ci.yml  release.yml
tests/: manual.yml  test_cli.py  test_ghurl.py  test_yax.py  test_yax_agentsmdbuildconfig.py
yax/: cli.py  yax.py
yaxai/: cli.py  ghurl.py  yax.py
