[project]
name = "yax"
version = "0.1.0"
description = ""
authors = [
    {name = "Henryk Konsek",email = "hekonsek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.3",
]

[project.scripts]
yax = "yax.cli:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
